@@ -6,8 +6,9 @@ Version 1.1.0 (released ??-???-????)
   * add daemon mode to standalone.py
   * rework and update helper application configuration options
   * teach standalone.py to recognize Subversion repositories via -r option
-  * open relative paths in "viewvc.conf" using the location of that file,
-    instead of the location of the ViewVC "lib" directory, as a base
+  * now interpret relative paths in "viewvc.conf" as relative to that file
+  * add 'purge' subcommand to cvsdbadmin and svndbadmin (issue #271)
+  * fix orphaned data bug in cvsdbadmin/svndbadmin rebuild (issue #271)
 
 Version 1.0.3 (released 13-Oct-2006)
 
